# arclio-rules

./: .env.example  .env.sops  .sops.yaml  Makefile  README.md  docker-copose.yml  main.py  pyproject.toml  rule_indexing_service.py  rule_resolution_service.py
.github/workflows/: deploy.yml
datamodels/: client_chema.py
src/: main.py  server.py
src/arclio_rules/: main.py  server_with_session.py  server_wo_session.py
src/arclio_rules/datamodels/: rule_schema.py
src/arclio_rules/routes/: resources.py  rules.py
src/arclio_rules/services/: rule_fetching_service.py  rule_indexing_service.py  rule_resolution_service.py  rule_storage_service.py
