[project]
name = "arclio-rules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "elasticsearch>=9.0.1",
    "fastapi>=0.115.12",
    "frontmatter>=3.0.8",
    "gitpython>=3.1.44",
    "loguru>=0.7.3",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
]
