[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arclio-rules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "elasticsearch>=9.0.1",
    "fastapi>=0.115.12",
    "fastapi-mcp>=0.3.4",
    "frontmatter>=3.0.8",
    "gitpython>=3.1.44",
    "loguru>=0.7.3",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.poe.tasks.start-dev]
shell = "source .env && uvicorn src.main:app --port $PORT --reload"
